[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.1.0"
aoc-runner-derive = "0.1.6"
arrayvec = { version = "0.4.8", features = ["array-sizes-129-255"] }
re-parse = "0.1.0"
re-parse-macros = "0.1.0"
serde_derive = "1.0.80"
serde = "1.0.80"
